--- a/src/ByteBank.Forum/Web.config
+++ b/src/ByteBank.Forum/Web.config
@@ -10,7 +10,7 @@
   </configSections>
 
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Database=Bytebank.Forum;trusted_connection=true" providerName="System.Data.SqlClient"/>
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Database=ByteBank.Forum;trusted_connection=true"/>
   </connectionStrings>
   
   <appSettings>
